tests/expectations/compiler/tuple/access_negative_fail.out
DCE_ENABLED:
Error [EPAR0370009]: unexpected string: expected 'identifier', found '-'
    --> compiler-test:6:24
     |
   6 |         return (t.0, t.-1); // Index `t.-1` is invalid.
     |                        ^
DCE_DISABLED:
Error [EPAR0370009]: unexpected string: expected 'identifier', found '-'
    --> compiler-test:6:24
     |
   6 |         return (t.0, t.-1); // Index `t.-1` is invalid.
     |                        ^